Possible fix for images on mobile

--- a/pages/graphics/graphics.less
+++ b/pages/graphics/graphics.less
@@ -599,7 +599,7 @@
     }
 
     .hires-img {
-      max-height: 100%;
+      margin:0 auto;
 
       img {
         max-height: 100%;
